samples/_failures_safe/1761787928_ebbebd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78215c2c.c: In function ‘main’:
./samples/SAFE/__tmp_78215c2c.c:200:12: error: missing terminating " character
  200 |     printf("Tokens found: %
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_78215c2c.c:200:5: error: expected expression at end of input
  200 |     printf("Tokens found: %
      |     ^~~~~~
./samples/SAFE/__tmp_78215c2c.c:200:5: error: expected declaration or statement at end of input
